[Landing] Hot fix overflow for image

--- a/src/styles/components/contact-us-section.css
+++ b/src/styles/components/contact-us-section.css
@@ -1,5 +1,6 @@
 .ContactUsSection {
   display: flex;
+  overflow: initial !important;
   align-items: center;
 
   box-sizing: content-box;
